tests/errors/semantic/blocking/APPEND_LIST_INCOMPATIBLE_TYPES_4.py
# Expecting an argument of the same type as the elements of the list
# pylint: disable=missing-function-docstring, missing-module-docstring

a = [[1, 2, 3]]
a.append((4.4, 8.4))
